--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta teglar for SEO -->
+<meta name="description" content="JDPU Jismoniy Madaniyat Kafedrasi - sport, sog‘liq va ta’lim yo‘nalishlari haqida to‘liq ma’lumotlar.">
+<meta name="keywords" content="JDPU, sport, jismoniy tarbiya, sog‘liq, Samsung Health, Google Fit, Strava, O‘g‘il-qizlar sporti, fakultet">
+<meta name="author" content="JDPU Team">
+
+<!-- Open Graph (social media sharing) -->
+<meta property="og:title" content="JDPU - Jismoniy Madaniyat Kafedrasi">
+<meta property="og:description" content="Sog‘lom hayot va jismoniy faollik haqida mukammal ma’lumotlar manbai.">
+<meta property="og:url" content="https://yo-hay99.netlify.app/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://yo-hay99.netlify.app/vite.svg">
+
+
+<!-- Mobile responsive -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
     <meta charset="UTF-8" />
     <link
       rel="icon"
