--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="ZORGrCNHYqjzLYKww2KdaU9Cb0PDbf_rMpbxzadXZno" />
     <!-- Meta teglar for SEO -->
 <meta name="description" content="JDPU Jismoniy Madaniyat Kafedrasi - sport, sog‘liq va ta’lim yo‘nalishlari haqida to‘liq ma’lumotlar.">
 <meta name="keywords" content="JDPU, sport, jismoniy tarbiya, sog‘liq, Samsung Health, Google Fit, Strava, O‘g‘il-qizlar sporti, fakultet">
